[package]
name = "onocoy-credit"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

# solana-program, solana-sdk and solana-program-test versions and releases are synchronized
# spl-token, spl-token-2022 follow more or less a similar release schedule going forwards
# spl-associated-token-account follows its own release logic

[dependencies]
solana-program = "~1.16"
spl-token = { version="~4.0", features = [ "no-entrypoint" ] }
spl-token-2022 = { version="~0.7", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="~2.0", features = [ "no-entrypoint" ] }
borsh = "~0.10.3"
thiserror = "~1.0.44"

[dev-dependencies]
assert_matches = "~1.5.0"
serde_json = "~1.0.96"
solana-sdk = "~1.16"
solana-program-test = "~1.16"

[lib]
crate-type = ["cdylib", "rlib"]
